WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104552
[Qt] Fix QtWebProcess discovery on Windows
https://bugs.webkit.org/show_bug.cgi?id=104552
Summary
[Qt] Fix QtWebProcess discovery on Windows
Simon Hausmann
Reported
2012-12-10 06:44:09 PST
[Qt] Fix QtWebProcess discovery on Windows
Attachments
Patch
(1.47 KB, patch)
2012-12-10 06:45 PST
,
Simon Hausmann
jturcotte
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Hausmann
Comment 1
2012-12-10 06:44:42 PST
On Windows we fail to find QtWebProcess in libexec/ because we look for QtWebProcess instead of QtWebProcess.exe
Simon Hausmann
Comment 2
2012-12-10 06:45:11 PST
Created
attachment 178538
[details]
Patch
Simon Hausmann
Comment 3
2012-12-10 06:55:38 PST
Committed
r137147
: <
http://trac.webkit.org/changeset/137147
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug