[Qt] Fix QtWebProcess discovery on Windows https://bugs.webkit.org/show_bug.cgi?id=104552

Reviewed by Jocelyn Turcotte.

Make sure to look for QtWebProcess.exe on Windows instead of QtWebProcess.

* Shared/qt/ProcessExecutablePathQt.cpp:
(WebKit::executablePath):

Canonical link: https://commits.webkit.org/122706@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137147 268f45cc-cd09-0410-ab3c-d52691b4dbfc